- added content.js file for source javascript to execute on page using tab.executeScript - a button gets added to the LinkedIn profile from where contents will be passed to the Salesforce instance

--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,6 @@
 	},
 	// background script permissions
 	"permissions" : [ 
-		"<all_urls>",
-		"http://*/",
-        "https://*/"
+		"<all_urls>"
 	]
 }
